# colorchecker_flutter

native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/colorlib/include/colorlib/: colorlib.h  export.h
native_opencv/android/colorlib/libs/x86/include/colorlib/: export_static.h
native_opencv/android/src/main/kotlin/com/valyouw/native_opencv/: NativeOpencvPlugin.kt
native_opencv/example/: pubspec.yaml
native_opencv/example/android/app/: build.gradle
native_opencv/example/android/app/src/debug/: AndroidManifest.xml
native_opencv/example/android/app/src/main/: AndroidManifest.xml
native_opencv/example/android/app/src/main/kotlin/com/valyouw/native_opencv_example/: MainActivity.kt
native_opencv/example/ios/Runner/: Info.plist
native_opencv/example/ios/Runner.xcodeproj/: project.pbxproj
native_opencv/ios/: native_opencv.podspec
native_opencv/ios/Classes/: native_opencv.cpp
native_opencv/ios/Classes/colorlib/: colorlib.h  common.h
native_opencv/lib/: native_opencv.dart
opencv_app/: pubspec.yaml
opencv_app/android/app/: build.gradle
opencv_app/android/app/src/debug/: AndroidManifest.xml
opencv_app/android/app/src/main/: AndroidManifest.xml
opencv_app/android/app/src/main/kotlin/com/vyw/opencv_app/: MainActivity.kt
opencv_app/ios/Runner/: Info.plist
opencv_app/ios/Runner.xcodeproj/: project.pbxproj
opencv_app/lib/: main.dart
opencv_app/lib/detection/: detection_page.dart
opencv_app/lib/results/: results_page.dart
